--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=car-rent
 
+# Spring Config
+server.port=8080
 
+# Database Config
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/carrent
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Config
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
